Update cmake version (3.9.6 -> 3.14.3)

--- a/manifests/jenkins-agent/centos/7/amd64/base/Dockerfile
+++ b/manifests/jenkins-agent/centos/7/amd64/base/Dockerfile
@@ -32,7 +32,7 @@ RUN mkdir -p /opt/sbt && \
     tar -xzC /opt/sbt --strip-components=1
 
 RUN mkdir -p /opt/cmake && \
-    curl -fsSL https://cmake.org/files/v3.9/cmake-3.9.6-Linux-x86_64.tar.gz | \
+    curl -fsSL https://cmake.org/files/v3.14/cmake-3.14.3-Linux-x86_64.tar.gz | \
     tar -xzC /opt/cmake --strip-components=1
 
 RUN source /opt/rh/devtoolset-6/enable && \
@@ -85,6 +85,7 @@ USER jenkins
 
 WORKDIR ${HOME}
 
+# Not working...
 RUN echo 'source /opt/rh/devtoolset-7/enable' >> "${HOME}/.bashrc"
 
 ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:${PATH} \
