Add python and pip for centos Jenkins agents images

--- a/manifests/jenkins-agent/centos/6/amd64/base/Dockerfile
+++ b/manifests/jenkins-agent/centos/6/amd64/base/Dockerfile
@@ -14,7 +14,8 @@ RUN yum install -y \
         tar \
         curl \
         openssl \
-        ca-certificates && \
+        ca-certificates \
+        zlib-devel && \
     yum clean all && rm -rf /var/cache/yum
 
 ENV M2_HOME /opt/maven
@@ -54,6 +55,15 @@ RUN source /opt/rh/devtoolset-6/enable && \
     make -j2 && \
     make altinstall
 
+# Required for datavec-python
+RUN source /opt/rh/devtoolset-6/enable && \
+    curl -fsSL https://www.python.org/ftp/python/3.6.8/Python-3.6.8.tgz \
+    | tar xz && \
+    cd Python-3.6.8 && \
+    ./configure --prefix=/opt/python36 && \
+    make -j2 && \
+    make altinstall
+
 FROM base_image AS base_builder_image
 
 COPY --from=build_tools /opt /opt
@@ -82,10 +92,17 @@ RUN yum install -y \
         # Required for Datavec NativeImageLoader
         gtk2-devel \
         # Required for DL4J docs generation
-        python-argparse && \
+        python-argparse \
+        # Required for Datavec-python
+        python-pip && \
     yum clean all && rm -rf /var/cache/yum && \
     ln -s /opt/maven/bin/mvn /usr/bin/mvn && \
-    ln -s /opt/python27/bin/python2.7 /usr/local/bin/python
+    ln -s /opt/python27/bin/python2.7 /usr/local/bin/python && \
+    ln -s /opt/python36/bin/python3.6 /usr/local/bin/python3 && \
+    ln -s /opt/python36/bin/pip3.6 /usr/local/bin/pip3
+
+# Required for Datavec-python
+RUN pip install --no-cache-dir Cython --install-option="--no-cython-compile"
 
 ENV HOME /home/jenkins
 
@@ -98,7 +115,7 @@ WORKDIR ${HOME}
 # Not working...
 RUN echo 'source /opt/rh/devtoolset-7/enable' >> "${HOME}/.bashrc"
 
-ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:${PATH} \
+ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:/opt/python36/bin:${PATH} \
     JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS}" \
     PROTOBUF_HOME=/opt/protobuf
 
