--- a/manifests/jenkins-agent/centos/6/amd64/cuda/9.2/Dockerfile
+++ b/manifests/jenkins-agent/centos/6/amd64/cuda/9.2/Dockerfile
@@ -28,9 +28,19 @@ RUN yum install -y \
         # Required for libnd4j CPU tests (minifier)
         which \
         # Required for Datavec NativeImageLoader
-        gtk2-devel && \
+        gtk2-devel \
+        # Required for DL4J docs generation
+        python-argparse \
+        # Required for Datavec-python
+        python-pip && \
     yum clean all && rm -rf /var/cache/yum && \
-    ln -s /opt/maven/bin/mvn /usr/bin/mvn
+    ln -s /opt/maven/bin/mvn /usr/bin/mvn && \
+    ln -s /opt/python27/bin/python2.7 /usr/local/bin/python && \
+    ln -s /opt/python36/bin/python3.6 /usr/local/bin/python3 && \
+    ln -s /opt/python36/bin/pip3.6 /usr/local/bin/pip3
+
+# Required for Datavec-python
+RUN pip install --no-cache-dir Cython --install-option="--no-cython-compile"
 
 ENV HOME /home/jenkins
 
@@ -43,7 +53,7 @@ WORKDIR ${HOME}
 # Not working...
 RUN echo 'source /opt/rh/devtoolset-6/enable' >> "${HOME}/.bashrc"
 
-ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:${PATH} \
+ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:/opt/python36/bin:${PATH} \
     JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS}" \
     PROTOBUF_HOME=/opt/protobuf \
     LD_LIBRARY_PATH=/usr/local/cuda-9.2/lib${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
