Fix LD_LIBRARY_PATH for centos cuda images

--- a/manifests/jenkins-agent/centos/7/amd64/cuda/10.0/Dockerfile
+++ b/manifests/jenkins-agent/centos/7/amd64/cuda/10.0/Dockerfile
@@ -60,6 +60,6 @@ RUN echo 'source /opt/rh/devtoolset-6/enable' >> "${HOME}/.bashrc"
 ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:${PATH} \
     JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS}" \
     PROTOBUF_HOME=/opt/protobuf \
-    LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/lib64/stubs${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+    LD_LIBRARY_PATH=/usr/local/cuda/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
 
 CMD ["cat"]
