--- a/manifests/jenkins-agent/skil/Dockerfile
+++ b/manifests/jenkins-agent/skil/Dockerfile
@@ -44,26 +44,11 @@ ENV HOME /home/jenkins
 
 RUN groupadd jenkins -g 1000 && useradd -d $HOME -u 1000 -g 1000 -m jenkins && usermod -aG docker jenkins
 
-ARG JENKINS_AGENT_VERSION=3.29
-RUN curl --create-dirs -sSLo /usr/share/jenkins/slave.jar \
-    https://repo.jenkins-ci.org/public/org/jenkins-ci/main/remoting/${JENKINS_AGENT_VERSION}/remoting-${JENKINS_AGENT_VERSION}.jar && \
-    chmod 755 /usr/share/jenkins && \
-    chmod 644 /usr/share/jenkins/slave.jar
-
 USER jenkins
-
-ARG JENKINS_AGENT_WORKDIR=/home/jenkins/agent
-ENV JENKINS_AGENT_WORKDIR=${JENKINS_AGENT_WORKDIR}
-RUN mkdir /home/jenkins/.jenkins && mkdir -p ${JENKINS_AGENT_WORKDIR}
-
-VOLUME /home/jenkins/.jenkins
-VOLUME ${JENKINS_AGENT_WORKDIR}
-
-COPY jenkins-slave /usr/local/bin/jenkins-slave
 
 WORKDIR ${HOME}
 
 ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:${PATH} \
     JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS}"
 
-ENTRYPOINT ["jenkins-slave"]
+CMD ["cat"]
