Add .gnupg folder creation for docker images on ppc64le platform

--- a/manifests/jenkins-agent/centos/7/ppc64le/base/Dockerfile
+++ b/manifests/jenkins-agent/centos/7/ppc64le/base/Dockerfile
@@ -90,6 +90,9 @@ USER jenkins
 
 WORKDIR ${HOME}
 
+RUN mkdir -p .gnupg
+
+# Not working...
 RUN echo 'source /opt/rh/devtoolset-7/enable' >> "${HOME}/.bashrc"
 
 ENV PATH=/opt/sbt/bin:/opt/cmake/bin:/opt/protobuf/bin:${PATH} \
