Add openblas installation step for centos Jenkins agents

--- a/manifests/jenkins-agent/centos/6/amd64/base/Dockerfile
+++ b/manifests/jenkins-agent/centos/6/amd64/base/Dockerfile
@@ -90,6 +90,8 @@ RUN yum install -y \
         git \
         rpm-build \
         java-1.8.0-openjdk-devel \
+        openblas-devel.x86_64 \
+        openblas-static.x86_64 \
         # Required for libnd4j CPU tests (minifier)
         which \
         # Required for Datavec NativeImageLoader
