--- a/manifests/jenkins-agent/centos/7/amd64/base/Dockerfile
+++ b/manifests/jenkins-agent/centos/7/amd64/base/Dockerfile
@@ -69,6 +69,8 @@ RUN yum install -y \
         git \
         rpm-build \
         java-1.8.0-openjdk-devel \
+        openblas-devel.x86_64 \
+        openblas-static.x86_64 \
         # Required for libnd4j CPU tests
         sudo \
         # Required for libnd4j CPU tests (minifier)
